--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,9 +2,7 @@
 
 .navbar{
     @include themify($themes) {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+ 
     display: flex;
     background-color: themed(bgSoft);
     width: 100%;
@@ -12,6 +10,8 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid themed(border);
+    width: 100vw;
+    
 
 
     .card{
