Added leave and delete functionality to groups. Next step: implement protected routes and context for the current group to prevent unauthorized access to random groups via URL and enable easier group operations.

--- a/src/components/downBar/downBar.scss
+++ b/src/components/downBar/downBar.scss
@@ -29,8 +29,13 @@
       .icon{
         font-size: 40px;
         color: themed(textColor);
-    }
-    }
+      }
+      &:hover{
+        cursor: pointer;
+        background-color: themed(bg);
+      }
+
+    } 
 
   }
 }
