--- a/src/components/players/players.scss
+++ b/src/components/players/players.scss
@@ -1,8 +1,13 @@
+@import "../../style.scss";
+
+
 .playersCard{
+    @include themify($themes) {
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
     justify-content: center;
-
+    background-color: themed(bg);
+    }
 }
