Added accept a declined invite feature

--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -37,6 +37,13 @@
 
                 }
             }
+
+            .downRB{
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+                margin: 5px;
+            }
         }
 
         
