--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@ $themes: (
     logo: darkblue,
     bgSoft: #f6f3f3,
     textColorSoft: #555,
-    border: lightgray,
+    border: #7c7676,
   ),
   dark: (
     textColor: whitesmoke,
@@ -13,29 +13,29 @@ $themes: (
     logo: white,
     bgSoft: #333,
     textColorSoft: lightgray,
-    border: #444,
+    border: lightgray,
   ),
 );
 
 @mixin themify($themes) {
-    @each $theme, $map in $themes {
-      .theme-#{$theme} & {
-        $theme-map: () !global;
-        @each $key, $submap in $map {
-          $value: map-get(map-get($themes, $theme), "#{$key}");
-          $theme-map: map-merge(
-            $theme-map,
-            (
-              $key: $value,
-            )
-          ) !global;
-        }
-        @content;
-        $theme-map: null !global;
+  @each $theme, $map in $themes {
+    .theme-#{$theme} & {
+      $theme-map: () !global;
+      @each $key, $submap in $map {
+        $value: map-get(map-get($themes, $theme), "#{$key}");
+        $theme-map: map-merge(
+          $theme-map,
+          (
+            $key: $value,
+          )
+        ) !global;
       }
+      @content;
+      $theme-map: null !global;
     }
   }
-  
-  @function themed($key) {
-    @return map-get($theme-map, $key);
-  }
+}
+
+@function themed($key) {
+  @return map-get($theme-map, $key);
+}
