Added leave game + real data for statistic

--- a/src/pages/friendPage/friendePage.scss
+++ b/src/pages/friendPage/friendePage.scss
@@ -6,26 +6,49 @@
     flex-direction: column;
     gap: 40px;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     background-color: themed(bg);
     padding-bottom: 200px;
-   
-    
-    
-    .friendeCompGP{
-       
-       
+
+    .friendeCompGP {
     }
 
+    .downBarCompGP {
+      position: fixed;
+      bottom: 20px;
+      left: 38%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: flex;
+      background-color: themed(bgSoft);
+      color: themed(textColorSoft);
+      width: 400px;
+      border: 2px solid themed(border);
+      border-radius: 10px;
+      height: 100px;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
 
-    .downBarCompGP{
-        position: fixed;
-        bottom: 20px;
-        left: 38%;
-        transform: translateX(-50%);
-        z-index: 1000; 
+      .itemDB {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        align-items: center;
+        justify-content: center;
+
+        border: 2px solid themed(border);
+        height: 100px;
+
+        .icon {
+          font-size: 40px;
+          color: themed(textColor);
+        }
+        &:hover {
+          cursor: pointer;
+          background-color: themed(bg);
+        }
+      }
     }
-}
-
-    
+  }
 }
