--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,112 +1,105 @@
 @import "../../style.scss";
-.register{
-    @include themify($themes) {
+.register {
+  @include themify($themes) {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background-color: themed(bgSoft);
-    
-    
 
-    .card{
-        width: 800px;
-        height: 400px;
+    .card {
+      width: 800px;
+      height: 400px;
+      display: flex;
+      border-radius: 20px;
+      background-color: themed(bg);
+      overflow: hidden;
+      box-shadow: 6px 10px 18px 0px themed(border);
+
+      .left {
         display: flex;
-        border-radius: 20px;
-        background-color: themed(bg);
-        overflow: hidden;
-        box-shadow: 6px 10px 18px 0px themed(border);;
+        flex-direction: column;
+        flex: 1;
+        gap: 20px;
 
-        .left{
-            display: flex;
-            flex-direction: column;
-            flex: 1;
-            gap: 40px;
+        align-items: center;
+        justify-content: center;
 
-            align-items: center;
-            justify-content: center;
+        .inputs {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
 
-            .inputs{
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
+          input {
+            width: 200px;
+            height: 40px;
+            background-color: themed(bgSoft);
+            color: themed(textColor);
+            border: 2px solid transparent;
+            font-size: large;
+            transition: all 0.3s ease;
+            outline: none;
 
-                input{
-                    width: 200px;
-                    height: 40px;
-                    background-color: themed(bgSoft);
-                    color: themed(textColor);
-                    border: 2px solid transparent;
-                    font-size: large;
-                    transition: all 0.3s ease; 
-                    outline: none;
-
-                    &:focus, &.focused{
-                        border-bottom: 2px solid themed(border);
-                    }
-
-                    &:hover {
-                        border-bottom: 2px solid themed(border);
-                        cursor: pointer;
-                      }
-
-
-                }
+            &:focus,
+            &.focused {
+              border-bottom: 2px solid themed(border);
             }
 
-            .buttons{
-                display: flex;
-                flex-direction: row;
-                gap: 40px;
-                
-                button {
-                    width: 80px;
-                    height: 30px;
-                    background-color: themed(bg);
-                    border: none;
-                    color: themed(textColor);
-                    border: 2px solid themed(border);
-                    transition: all 0.3s ease; 
-  
-                    &:hover {
-                      background-color: themed(bgSoft);
-                      border-bottom: 2px solid themed(border);
-                      cursor: pointer;
-                      padding: 0;
-                    }
-                  }
+            &:hover {
+              border-bottom: 2px solid themed(border);
+              cursor: pointer;
             }
+          }
+          span {
+            color: red;
+          }
         }
 
-        .right {
-            flex: 1;
-            background-image: url("../../assets/login.webp");
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            flex-direction: column;
-            gap: 200px;
-            
-            
-            
+        .buttons {
+          display: flex;
+          flex-direction: row;
+          gap: 40px;
 
-            h1{
-                padding: 0px 10px;
-                color: themed(textColor);
-                font-weight: bold;
-            }
+          button {
+            width: 80px;
+            height: 30px;
+            background-color: themed(bg);
+            border: none;
+            color: themed(textColor);
+            border: 2px solid themed(border);
+            transition: all 0.3s ease;
 
-            span{
-                padding: 0px 10px;
-                width: 250px;
-                color: themed(textColor);
+            &:hover {
+              background-color: themed(bgSoft);
+              border-bottom: 2px solid themed(border);
+              cursor: pointer;
+              padding: 0;
             }
-            
+          }
         }
-        
+      }
 
-    }
+      .right {
+        flex: 1;
+        background-image: url("../../assets/login.webp");
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        gap: 200px;
 
+        h1 {
+          padding: 0px 10px;
+          color: themed(textColor);
+          font-weight: bold;
+        }
+
+        span {
+          padding: 0px 10px;
+          width: 250px;
+          color: themed(textColor);
+        }
+      }
     }
+  }
 }
