--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -25,7 +25,9 @@
 
         align-items: center;
         justify-content: center;
-
+        h1 {
+          color: themed(textColor);
+        }
         .inputs {
           display: flex;
           flex-direction: column;
